styles/main.css
/*set colours and fonts for the project*/
:root {
  --pink: #ff94bd;
  --green: #1a6149;
  --eggshell: #faf7ec;
  --black: #100d0d;
  --coral: coral;
  --nav: 'Rubik', sans-serif;
  --main-text: 'Archivo', sans-serif;
  --callouts: 'Condiment', monospace;
}
body {
  background-color: var(--eggshell);
}
/*nav bar - same styling across every page*/
#nav-bar {
  background-color: var(--green);
  height: 60px;
  overflow: hidden;
  font-family: var(--nav);
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  border-bottom: 1px solid var(--black);
  z-index: 1;
}
#nav-left {
  float: left;
  height: 100%;
}
#nav-right {
  float: right;
  height: 100%;
}
#logo {
  height: 60%;
  float: left;
  position: relative;
  top: 20%;
  left: 15px;
  cursor: default;
}
/*styling the different links in nav bar - if need more - give class nav-link*/
.nav-link {
  color: var(--pink);
  text-decoration: none;
  padding: 0.5rem;
  font-size: 1.5em;
  margin: 0 1rem;
  text-align: center;
  line-height: 60px;
}
.nav-link:hover {
  font-style: italic;
}
/*article sections in index and gallery pages*/
.articles {
  margin-top: 80px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}
/*image card for profile photo*/
#profile-card {
  display: flex;
}
/*image card for blog photos/links*/
.blog-card {
  display: flex;
}
@media (max-width: 600px) {  
  #profile-card {
    transform: scale(0.75);
    position: relative;
  }
  .index-article {
    justify-content: space-evenly;
    overflow: hidden;
    margin-top: 40px;
  }
}
/*shared properties for all image cards*/
figure {
  box-shadow: 10px 10px var(--green);
  height: fit-content;
  width: fit-content;
  border: 1px solid var(--black);
  background-color: var(--pink);
  border-radius: 3px;
}
figure:hover {
  box-shadow: 10px 10px var(--coral);
}
/*caption/description for image cards*/
.card-caption {
  padding: 5px 0 10px 0;
  text-align: center;
  font-family: var(--main-text);
  font-weight: 400;
}
/*profile photo on index page*/
#profile-photo {
  height: 70vh;
  width: auto;
  border-bottom: 1px solid var(--black);
}
/*blog photos on gallery pages*/
.blog-photo {
  height: 50vh;
  width: auto;
  border-bottom: 1px solid var(--black);
}
/*all text on index page */
#greeting {
  color: var(--black);
  font-family: var(--main-text);
  font-weight: 600;
  font-size: 4em;
  padding-left: 1rem;
}
.about-me {
  color: var(--black);
  font-family: var(--main-text);
  font-weight: 400;
  font-size: 1.5rem;
  max-width: 400px;
  line-height: 1.8;
  padding: 1rem;
}
#github-link {
  color: var(--green);
  text-decoration: none;
}
#github-link:hover {
  color: var(--pink);
}
/*call out sticker on index page*/
.sticker {
  position: relative;
  width: 0;
  height: 0;
  left: -50%;
  top: -20px;
}
.callout {
  position: relative;
  left: -34%;
  top: 10px;
  font-family: var(--callouts);
  font-size: 3em;
}
/*call out sticker on gallery page*/
#new-sticker {
  position: relative;
  width: 0;
  height: 0;
  right: 180px;
  top: -20px;
}
.new-callout {
  position: relative;
  left: 40px;
  bottom: 125px;
  font-family: var(--callouts);
  font-size: 2.8em;
}
/*all links - remove default link decoration*/
a {
  text-decoration: none;
  color: var(--black);
}
/*blog layout - reused for every blog page*/
.blog-content {
  margin: 100px 7.5% 0 7.5%;
  font-family: var(--main-text);
  color: var(--black);
}
.blog-heading {
  font-size: 3em;
}
.blog-text {
  font-size: 1.2rem;
  display: flex;
  flex-direction: column;
  line-height: 2rem;
}
.green-heading {
  color: var(--green);
  font-weight: bold;
}
.blog-image1 {
  box-shadow: 5px 5px var(--pink);
  border: 1px solid var(--black);
  max-height: 100%;
  object-fit: cover;
}
/*media queries for blog page - if screen is 1050px or bigger line p1 and image1 up next to each other*/
@media (min-width: 1050px) {
  .blog-content {
    margin: 100px 150px 0 150px;
  }
  .blog-text {
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 20px;
    align-items: center;
    font-size: 1.2rem;
  }
  .p1 {
    width: 50%;
    flex-grow: 2;
  }
  .blog-image1 {
    max-width: 40%;
  }
}

